examples/test/testpolicy18305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18305
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key7: value5
      key32: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value16
          key0: value5
          key44: value15
      podSelector:
        matchLabels:
          key46: value8
